--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,7 +20,14 @@
     top: 0;
 
     &__image{ width: 10em }
-    &__h1{ font-size: 1.5em }
+    &__option{
+        border: .03em solid #fff;
+        color: #fff;
+        padding: .5em;
+
+        &:nth-child(2){ margin-left: 2em }
+        & svg{ vertical-align: text-top }
+    }
 }
 
 //------------------------------------
@@ -99,7 +106,7 @@
         position: absolute;
         color: #7e3636;
         font-size: 2em;
-        left: -.3em;
+        left: -.1em;
         top: -.3em;
         background-color: #242424;
     }
@@ -151,7 +158,6 @@
     align-items: center;
 
     & > div{  
-        width: 90%;
         max-height: 90%;
         padding: 3em 1em 1em 1em;
         display: flex;
@@ -165,18 +171,27 @@
 
 //------------------------- UPLOAD FORM BOX
 .UploadForm{
-    display: grid;
-    grid-template-columns: repeat(4, 10em);
-    grid-template-rows: 7em repeat(6, 2em) 2.5em;
-    row-gap: 2em;
-    column-gap: 1em;
-    margin-left: 10em;
+    width: 80%;
+    position: relative;
+    transform: scale(.05);
+    transition: transform .3s ease-in;
+    overflow-y: scroll;
+    
+    &--active{ transform: scale(1) }
+
+    &__form{
+        display: grid;
+        grid-template-columns: repeat(4, 10em);
+        grid-template-rows: 7em repeat(6, 2em) 2.5em;
+        row-gap: 2em;
+        column-gap: 1em;
+    }
   
     &__inputContainer{ position: relative; grid-column: 2 span }
     &__inputContainer input{ 
       width: 100%; 
       padding: 1em;
-      background-color: #242424;
+      background-color: #4d4d4d;
       outline: none;
       border: .1em solid rgb(153, 151, 151);
       border-radius: .6em;
@@ -184,7 +199,7 @@
     &__label{
       position: absolute;
       top: 70%;
-      background-color: #242424;
+      background-color: #4d4d4d;
       padding: .2em;
       transform-origin: left;
       transform: translate(.5em,-50%);
@@ -230,6 +245,7 @@
 
 //------------------------- VEHICLE BOX
 .VehicleBox{
+    width: 80%;
     position: relative;
     transform: scale(.05);
     transition: transform .3s ease-in;
@@ -305,7 +321,6 @@
     }
     // &__optionsContainer{}
     &__option{
-        //background-color: #6d6d6d;
         border: .03em solid #fff;
         color: #fff;
         padding: .5em;
@@ -322,3 +337,22 @@
 
 
 //------------------------- EDIT BOX
+
+.ErrorFindVehicles{
+    margin-top: 5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__span{
+        text-align: center;
+        font-size: 1.4em;
+    }
+    &__link{
+        border: .03em solid #fff;
+        color: #fff;
+        padding: .5em;
+
+        & svg{ vertical-align: text-top }
+    }
+}
