--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,21 +1,22 @@
 //---- Settings
+    @import 'settings/variables';
 
 //---- Utils
+    @import 'utils/mixins-function';
 
 //---- Components
-@import 'components/layouts';
+    @import 'components/layouts';
+    @import 'components/buttons';
 
 //---- Generics
-@import 'generics/reset';
+    @import 'generics/reset';
 
 
 //------------------------------------
 //------------- HEADER ---------------
 //------------------------------------
 .Header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flex(space-between, center);
     background-color: #000;
     padding: 0 1.5em 0 0;
     top: 0;
@@ -34,49 +35,26 @@
 //------------------------------------
 //------------- MAIN -----------------
 //------------------------------------
-.Main{
-    display: grid;
-    grid-template-columns: 20% 80%;
-    justify-content: center;
-    align-items: flex-start;
-}
+.Main{ @include grid(20% 80%, 1fr , center, flex-start) }
 
 //--------------------------------------------------------------------------------------
 //--------------------------------- VEHICLES SECTION -----------------------------------
 //--------------------------------------------------------------------------------------
 .Main__containerVehicles{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(13em,17em));
-    grid-template-rows: auto;
-    justify-content: center;
-    gap: 1.5em 1em;
-    padding: 2em 1em;
+    @include grid(repeat(auto-fit, minmax(13em,17em)), auto );
+    gap: 1em 1em;
+    padding: 1.5em 1em;
 }
 
 //--------------------------- FILTERS
 .FiltersContainer{
-    display: flex;
-    flex-direction: column;
+    @include flex(flex-start, top, column);
     gap: 1em;
-    margin-top: 2em;
+    margin-top: 1em;
     padding-left: 1em;
     height: fit-content ;
 
-    &::after{
-        content: "";
-        position: absolute;
-        right: -2em;
-        top: 0;
-        width: 1px;
-        height: 120%;
-        background-color: rgb(131, 131, 131);
-    }
-
-    &__select{
-        font-size: 1.2em;
-        outline: none;
-        width: 100%;
-    }
+    &__select{ font-size: 1.2em; outline: none; width: 100% }
 
     &__checkboxContainer{ margin-left: .5em }
     &__checkboxContainer--sold{ margin-left: 0 }
@@ -86,7 +64,7 @@
 
 //---------------------- VEHICLE CARD
 .Vehicle{ 
-    border: .02em solid rgb(71, 71, 71); 
+    border: .02em solid $secundary-color; 
 
     &__imageContainer{ height: 11em; position: relative }
     &__img{ width: 100%; height: 100%; object-fit:cover; user-select: none }
@@ -94,8 +72,8 @@
     &__model, &__type{
         position: absolute;
         right: -.5em;
-        background-color: rgb(212, 212, 212);
-        color: rgb(44, 44, 44);
+        background-color: $primary-color;
+        color: $tertiary-color;
         padding: .3em .5em;
         font-weight: 700;
         box-shadow: -1px 1px 5px rgba(0,0,0,0.5);
@@ -109,30 +87,25 @@
         font-size: 2em;
         left: -.1em;
         top: -.3em;
-        background-color: #242424;
+        background-color: $tertiary-color;
     }
     
-    
     &__info{ 
-        display: flex; 
-        justify-content: space-between; 
+        @include flex(space-between); 
         padding: 0 .8em; 
         font-size: 1.2em; 
         margin-top: .2em; 
-        color: rgb(165, 165, 165);
+        color: $info-color;
     }
     &__name{ margin: .4em 0; text-align: center; font-size: 1.5em; cursor: pointer }
     &__name a{ color: #fff }
     &__name:hover{ text-decoration: underline }
-
 }
 
 //-------------------------- HANDLER PAGES
 .HandlerPages{ 
     grid-column: 3 span;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex();
     gap: .5em;
 
     &__span{ font-size: 1.8em }
@@ -141,8 +114,6 @@
         cursor: pointer;
     }
 }
-
-
 
 //---------------------------------------------------------------------------------
 //------------------------------ BOXES CONTAINER-----------------------------------
@@ -154,17 +125,13 @@
     background-color: rgba(0,0,0,0.4);
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex();
 
     & > div{  
         max-height: 90%;
         padding: 3em 1em 1em 1em;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: #4d4d4d;
+        @include flex(baseline, center, column);
+        background-color: $background-color;
     }
     
 }
@@ -174,77 +141,83 @@
 .UploadForm{
     width: 80%;
     position: relative;
+    overflow-y: scroll;
     transform: scale(.05);
     transition: transform .3s ease-in;
-    overflow-y: scroll;
-    
     &--active{ transform: scale(1) }
 
     &__form{
-        display: grid;
-        grid-template-columns: repeat(4, 10em);
-        grid-template-rows: 7em repeat(6, 2em) 2.5em;
+        @include grid(repeat(4, 10em) , 7em repeat(6, 3em) 5em 2.5em , center, top);
         row-gap: 2em;
         column-gap: 1em;
     }
+
+    //-------- Edit Box -------
+        &__form--edit{ grid-template-rows: repeat(6, 3em) 5em 2.5em }
+        &__div--edit{ display: flex; gap: .7em; align-items: flex-start; margin-bottom: 2em }
+        &__image--edit{ width: 5em; box-shadow: -1px 1px 7px rgba(0,0,0,0.8) }
+    //-------------------------
   
     &__inputContainer{ position: relative; grid-column: 2 span }
-    &__inputContainer input{ 
+    &__inputContainer input, &__inputContainer textarea{ 
       width: 100%; 
       padding: 1em;
-      background-color: #4d4d4d;
+      background-color: $background-color;
       outline: none;
-      border: .1em solid rgb(153, 151, 151);
+      border: .1em solid $input-color;
       border-radius: .6em;
     }
+    &__inputContainer textarea{ resize: none; height: 100% }
     &__label{
-      position: absolute;
-      top: 70%;
-      background-color: #4d4d4d;
-      padding: .2em;
-      transform-origin: left;
-      transform: translate(.5em,-50%);
-      transition: transform .2s ease-in-out;
-      color: rgb(153, 151, 151);
-    }&__label--active{ transform: translate(.7em, -2.3em)  scale(.8) }
-    
+        position: absolute;
+        top: 70%;
+        background-color: $background-color;
+        padding: .2em;
+        transform-origin: left;
+        transform: translate(.5em,-90%);
+        transition: transform .2s ease-in-out;
+        color: $input-color;
+
+        &--textarea{ top: 40% }
+        &--active{ transform: translate(.7em, -3em)  scale(.8) }
+    }
+
+    &__submitButton{ grid-column: 4 span; cursor: pointer }
     
     /*----------  Images ----------*/
     &__inputImageContainer{ 
       grid-column: 1 span; 
-      background-color: #4d4d4d;
-      display: flex;
-      justify-content: center; 
-      align-items: center;
+      background-color: $background-color;
+      @include flex();
       border-radius: .3em;
-    }&__inputImageContainer input{ display: none }
+      
+      & > input{ display: none }
+    }
+    
     &__labelImage{
-      background-color: #242424a4; 
+      background-color: $tertiary-color; 
       padding: .5em;
       vertical-align: text-top;
       border-radius: 1em;
       cursor: pointer;
-    }&__labelImage:hover{ opacity: .7; }
+      
+      &:hover{ opacity: .7 }
+    }
     
     &__inputImagesContainer{ grid-column: 3 span; margin-left: 2em; align-self: center }
     
     /*---------------CONFIG */
-    &__inputPriceContainer{ grid-column: 4 span }
-    &__submitButton{ grid-column: 4 span; cursor: pointer }
-    
-    &__obligatory{
-      position: absolute;
-      right: .3em;
-      top: 50%;
-      color: rgb(153, 151, 151);
-      background-color: #242424;
-      font-size: 2em;
-    }
+    &__inputExtraContainer{ grid-column: 4 span }
 
+    &__inputContainer--radio{ 
+      @include flex();
+
+      & input{ width: fit-content; margin: 10px }
+    }
 }
 
-
 //------------------------- VEHICLE BOX
+//------------------------------------------
 .VehicleBox{
     width: 80%;
     position: relative;
@@ -252,15 +225,6 @@
     transition: transform .3s ease-in;
     overflow-y: scroll;
     &--active{ transform: scale(1) }
-
-    //-------------------- Exit button
-    &__exitButton{
-        position: absolute;
-        top: .2em;
-        right: .5em;
-        font-size: 2em;
-        color: aliceblue;
-    }
 
     //-------------------- Image section
     &__imagesContainer{
@@ -274,7 +238,7 @@
         top: 50%;
         transform: translateY(-50%);
         font-size: 2.5em;
-        background-color: #242424;
+        background-color: $tertiary-color;
         cursor: pointer;
     
         &--left{ left: 0 }
@@ -290,12 +254,16 @@
             object-fit: contain;
         }
     }
+    &__downloadImage{
+        position: absolute;
+        color: #fff;
+        left: 8em;
+    }
 
     //------------------------ Main data
     &__mainDataContainer{
         display: grid;
         width: 50%;
-        // justify-items: center;
         grid-template-columns: 1fr 1fr;
         gap: .5em 1em;
     }
@@ -305,6 +273,13 @@
 
     //------------------------- Extra data
     &__h3{ width: 50%; margin-top: 2em; margin-bottom: .5em }
+    &__extraDataContainer{
+        width: 50%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    &__extraData svg{ vertical-align: text-top; margin-right: .3em }
     &__extraData--error{
         display: flex;
         align-items: center;
@@ -320,40 +295,18 @@
         margin-top: 3em;
         width: 50%;
     }
-    // &__optionsContainer{}
+    
     &__option{
-        border: .03em solid #fff;
-        color: #fff;
+        border: .03em solid $primary-color;
+        color: $primary-color;
         padding: .5em;
 
         &:nth-child(2){ margin-left: 2em; }
     }
     &__price{
         font-weight: 800;
-        background-color: #6d6d6d;
+        background-color: $tertiary-color;
         padding: .5em;
     }  
-    &__soldMessage{ font-weight: 700;  font-size: 1.7em; color: #9c9c9c }
-}
-
-
-//------------------------- EDIT BOX
-
-.ErrorFindVehicles{
-    margin-top: 5em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    &__span{
-        text-align: center;
-        font-size: 1.4em;
-    }
-    &__link{
-        border: .03em solid #fff;
-        color: #fff;
-        padding: .5em;
-
-        & svg{ vertical-align: text-top }
-    }
+    &__soldMessage{ font-weight: 700;  font-size: 1.7em; color: $info-color }
 }
