--- a/src/styles/components/_layouts.scss
+++ b/src/styles/components/_layouts.scss
@@ -37,3 +37,47 @@
         & svg{ vertical-align: text-top }
     }
 }
+
+.ContainerBoxes{
+
+    &__box{
+        max-height: 90%;
+        padding: 3em 1em 1em 1em;
+        @include flex(baseline, center, column);
+        background-color: $background-color;
+
+        width: 80%;
+        position: relative;
+        overflow-y: scroll;
+        transform: scale(.05);
+        transition: transform .3s ease-in;
+        &--active{ transform: scale(1) }
+    }
+    
+    &__loadingContainer{
+        width: 80%;
+        height: 90%;
+        background-color: $background-color;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        @include flex(center,center,row);
+        gap: .7em;
+
+        display: none;
+        &--active{ display: flex; }
+    }
+    &__circleLoading{
+        width: 2em;
+        height: 2em;
+        background-color: #6d6d6d;
+        border-radius: 50%;
+        animation: circleAnimation;
+        animation-duration: 1.2s;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in;
+    }
+    &__circleLoading:nth-child(2){ animation-delay: .1s }
+    &__circleLoading:nth-child(3){ animation-delay: .25s }
+}
