--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
     @import 'settings/variables';
 
 //---- Utils
+    @import 'utils/keyframes';
     @import 'utils/mixins-function';
 
 //---- Components
@@ -41,8 +42,8 @@
 //--------------------------------- VEHICLES SECTION -----------------------------------
 //--------------------------------------------------------------------------------------
 .Main__containerVehicles{
-    @include grid(repeat(auto-fit, minmax(13em,17em)), auto );
-    gap: 1em 1em;
+    @include grid(repeat(auto-fit, minmax(13em,17em)), 1fr 1fr );
+    gap: 1em 1.5em;
     padding: 1.5em 1em;
 }
 
@@ -66,7 +67,7 @@
 .Vehicle{ 
     border: .02em solid $secundary-color; 
 
-    &__imageContainer{ height: 11em; position: relative }
+    &__imageContainer{ height: 10.2em; position: relative }
     &__img{ width: 100%; height: 100%; object-fit:cover; user-select: none }
     
     &__model, &__type{
@@ -126,25 +127,10 @@
     width: 100%;
     height: 100%;
     @include flex();
-
-    & > div{  
-        max-height: 90%;
-        padding: 3em 1em 1em 1em;
-        @include flex(baseline, center, column);
-        background-color: $background-color;
-    }
-    
 }
-
 
 //------------------------- UPLOAD FORM BOX
 .UploadForm{
-    width: 80%;
-    position: relative;
-    overflow-y: scroll;
-    transform: scale(.05);
-    transition: transform .3s ease-in;
-    &--active{ transform: scale(1) }
 
     &__form{
         @include grid(repeat(4, 10em) , 7em repeat(6, 3em) 5em 2.5em , center, top);
@@ -159,7 +145,7 @@
     //-------------------------
   
     &__inputContainer{ position: relative; grid-column: 2 span }
-    &__inputContainer input, &__inputContainer textarea{ 
+    &__inputContainer input, &__inputContainer textarea, &__inputContainer select{ 
       width: 100%; 
       padding: 1em;
       background-color: $background-color;
@@ -219,12 +205,6 @@
 //------------------------- VEHICLE BOX
 //------------------------------------------
 .VehicleBox{
-    width: 80%;
-    position: relative;
-    transform: scale(.05);
-    transition: transform .3s ease-in;
-    overflow-y: scroll;
-    &--active{ transform: scale(1) }
 
     //-------------------- Image section
     &__imagesContainer{
@@ -275,9 +255,10 @@
     &__h3{ width: 50%; margin-top: 2em; margin-bottom: .5em }
     &__extraDataContainer{
         width: 50%;
+        display: grid;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        gap: .5em 1.5em;
     }
     &__extraData svg{ vertical-align: text-top; margin-right: .3em }
     &__extraData--error{
