--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -134,7 +134,7 @@
         &__div--edit{ display: flex; gap: .7em; align-items: flex-start; margin-bottom: 2em }
         &__image--edit{ width: 5em; box-shadow: -1px 1px 7px rgba(0,0,0,0.8) }
     //-------------------------
-  
+
     &__inputContainer{ position: relative; grid-column: 2 span }
     &__inputContainer input, &__inputContainer textarea, &__inputContainer select{ 
       width: 100%; 
@@ -171,14 +171,39 @@
       & > input{ display: none }
     }
     
+    &__previewImageContainer{ 
+        position: relative; 
+        height: 100%; 
+        width: 100%; 
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.8);
+    }
+
     &__labelImage{
-      background-color: $tertiary-color; 
-      padding: .5em;
-      vertical-align: text-top;
-      border-radius: 1em;
-      cursor: pointer;
+        background-color: $tertiary-color; 
+        padding: .5em;
+        vertical-align: text-top;
+        border-radius: 1em;
+        cursor: pointer;
       
-      &:hover{ opacity: .7 }
+        &--active{
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 0;
+            padding: 0;
+            @include flex()
+        }
+
+        &:hover{ opacity: .7 }
+    }
+
+    &__previewImage{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
     
     &__inputImagesContainer{ grid-column: 3 span; margin-left: 2em; align-self: center }
